<resources>
    <string name="app_name">TamalProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="No_network_connection">No network connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="product_image_name">imgProduct</string>
    <string name="login">Login</string>
    <string name="new_user">New user? Register here</string>
    <string name="network_error">Network connection not available, Please check connection.</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="add_photo">Add photo</string>
    <string name="action_exit">exit</string>
    <string name="Address">Address</string>
    <string name="Zipcode">Zipcode</string>
    <string name="InActive">InActive</string>
    <string name="Active">Active</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="ConfirmPassword">ConfirmPassword</string>
    <string name="Register">Register</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Password">Password</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="TermsAndPolicies"><u>Terms and privacy policy</u></string>
    <string name="NoProducts">No Products Available</string>
    <string name="Status">Current status</string>
    <string name="error_invalid_password">please enter valid  password!</string>
    <string name="error_invalid_User">please enter valid mobile number</string>
    <string name="error_empty_field">Enter valid data</string>
    <string name="dialog_title">Sell Product</string>
    <string name="dialog_remove_title_add_product">Remove</string>
    <string name="dialog_Remove_message_add_product">Are you sure to remove product?</string>
    <string name="dialog_logout">Are you sure to logout?</string>
    <string name="dialog_exit">Are you sure to exit?</string>
    <string name="ProductStatus">Product Status</string>
    <string name="quantity">Quantity</string>
    <string name="update_product">Please!! Confirm Your Changes?</string>
    <string name="ProductOrganic">Organic</string>

    <string name="title_activity_offer_details">OfferDetailsActivity</string>
    <string name="Please_select_a_size">Please_select_a_size</string>
    <string name="add_product">Add Product</string>
    <string name="expected_price">Expected Price</string>
    <string name="weight_in_kg">Weight in kg</string>
    <string name="add_delivery_partner">+ Add Delivery Partner</string>
    <string name="select_product_name">Select Product Name</string>
    <string name="enter_servicable_pincode">Enter Servicable Pincode</string>
    <string name="enter_your_delivery_pincode">Enter Your Delivery Pincode</string>
    <string name="add_servicable_pincode">Add Servicable Pincode</string>
    <string name="submit">Submit</string>
    <string name="title_activity_account_verification">AccountVerificationActivity</string>
    <string name="enter_your_bank_account_number">Enter your Bank account number</string>
    <string name="update">Update</string>
    <string name="forgot_password_click_here_to_reset">Forgot Password? click here to reset.</string>
    <string name="enter_your_registered_mobile_number">Enter your registered mobile number</string>
    <string name="email">Email</string>
    <string name="horizontalline">horizontalline</string>
    <string name="passbook_image">passbook_image</string>
    <string name="background">background</string>

    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="shop_name">Shop Name</string>
    <string name="enter_your_bank_name">Enter your bank name</string>
    <string name="bank_ifsc_code">Bank IFSC code</string>
    <string name="click_here_to_add_your_passbook_photo">Click here to add your passbook photo</string>
    <string name="passbook_photo">Passbook photo</string>
    <string name="search">Search</string>
    <string name="logout">logout</string>
    <string name="expected_delivery_time">Expected Delivery Time</string>
    <string name="assign_order_for_delivery">Assign Order For DELIVERY</string>
    <string name="call_delivery_partner">call Delivery Partner</string>
    <string name="view_details"><![CDATA[View Details>>]]></string>
    <string name="expected_delivery_date">Expected Delivery Date</string>
    <string name="apply_offer">Apply Offer</string>
    <string name="used">Used</string>
    <string name="start_date">Start Date</string>
    <string name="expire_date">Expire Date</string>
    <string name="no_offer_avialble">No offer avialble!!</string>
    <string name="delivery_details">Delivery Details:</string>
    <string name="order_date">Order Date</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="delivery_partner">Delivery Partner</string>
    <string name="delivery_partner_mobile_no">Delivery Partner Mobile No.</string>
    <string name="product_type">Product Type</string>
    <string name="save">Save</string>
    <string name="enter_offer_name">Enter Offer Name</string>

    <string name="discount">Discount</string>
    <string name="enter_discount_in_percent">Enter Discount in Percent</string>
    <string name="date_range">Date Range</string>

    <string name="end_date">END DATE</string>
    <string name="offer_description">Offer Description</string>
    <string name="enter_offer_description">Enter Offer Description</string>


    <string name="select_date">Select date</string>
    <string name="insights">INSIGHTS</string>
    <string name="last_7_days">LAST 7 DAYS</string>

    <string name="reset_password">Reset Password</string>
    <string name="price_details">Price Details:</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="total_amount">Total amount</string>
    <string name="product_details">Product Details:</string>
    <string name="weight">Weight:</string>
    <string name="note_you_cannot_cancel_order_after_24_hours">Note:You cannot cancel order after 24 hours</string>
    <string name="select_product_type">Select Product Type</string>
    <string name="product_name">Product Name</string>
    <string name="assumed_weight">Assumed Weight</string>
    <string name="price_for_1_kg">Price for 1 kg</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="add_change_address">Add/change address</string>
    <string name="dismiss">Dismiss</string>
    <string name="add_new_offer">Add New Offer</string>
    <string name="add1_servicable_pincode">+ Add Servicable Pincode</string>
    <string name="send_password">send password</string>
    <string name="error_description">please enter description</string>
    <string name="error_discount">Enter Offer Discount</string>
    <string name="error_date">Please Select Date</string>
    <string name="FullName">Enter your full name</string>
    <string name="E_MAIL">E-mail</string>
    <string name="bank_account_holder">Account Holder Name</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="ifsc_code">IFSC code</string>
    <string name="account_number">Re-Enter Account Number</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="later">Later</string>
    <string name="update_bank_details">Update Bank Details</string>
    <string name="subscription">subscriptions</string>
    <string name="title_activity_subscription_delivery">SubscriptionDeliveryActivity</string>
    <string name="use_my_location">Use my location</string>
    <string name="set_location_manually">Set location manually</string>
    <string name="add1_servicable_pincode_location">Add pincode by location</string>
    <string name="where_do_you_want_to_give_delivery">Where do you want to give delivery</string>
    <string name="no_notifications_available">No notifications available</string>
    <string name="you_have_new_subscription_request">You have new Subscription Request</string>
    <string name="buyer_subscribed_your_order">Buyer Subscribed Your order....</string>
    <string name="general_information">General Information :</string>
    <string name="subplan">SubPlan</string>
    <string name="delievry_for_following_days">Delievry for following days :</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="price_information">Price Information :</string>
    <string name="product_information">Product Information :</string>
    <string name="select_seller_type">Select Seller Type</string>
    <string name="vegitable_amp_fruits_seller"><![CDATA[Vegitable & Fruits Seller]]></string>
    <string name="milk_seller">Milk Seller</string>
    <string name="bank_account_type">Bank Account Type</string>
    <string name="your_message">YOUR MESSAGE</string>
    <string name="send">send</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="u2022_tools_and_category"><u>• Tools and category</u></string>
    <string name="special_offer"><u>Special offer</u></string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="term2">I hearby acknowledge that I am liable to pay the repair cost as highlighted again \'Repair details\' and will lose my right to withdraw from the </string>
    <string name="title_activity_product">ProductActivity</string>


</resources>
