<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".Fragment.RepairService">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <in.prax.tamalproject.view.MyTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="Select the category to which your tool belongs"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnWarrenty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector_white"
                    android:text="Warranty"
                    android:textColor="@color/colorPrimary" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnOutOfWarrenty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:text="Out of Warranty"
                    android:textColor="@color/white" />
            </LinearLayout>

            <in.prax.tamalproject.view.MyEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/register_background_edittext"
                android:hint="Company name"
                android:padding="10dp" />

            <in.prax.tamalproject.view.MyEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/register_background_edittext"
                android:hint="Full name"
                android:padding="10dp" />

            <in.prax.tamalproject.view.MyEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/register_background_edittext"
                android:hint="Office/Project site address"
                android:padding="10dp" />

            <in.prax.tamalproject.view.MyEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/register_background_edittext"
                android:hint="Postal code"
                android:padding="10dp" />

            <in.prax.tamalproject.view.MyEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/register_background_edittext"
                android:hint="@string/MobileNumber"
                android:padding="10dp" />

            <in.prax.tamalproject.view.MyEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/register_background_edittext"
                android:hint="@string/E_MAIL"
                android:padding="10dp" />

            <in.prax.tamalproject.view.MyEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/register_background_edittext"
                android:hint="Date of delivery"
                android:padding="10dp" />

            <in.prax.tamalproject.view.MyEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/register_background_edittext"
                android:hint="Order id"
                android:padding="10dp" />

            <in.prax.tamalproject.view.MyEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/register_background_edittext"
                android:hint="Fault description"
                android:padding="10dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Repair details along with price"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pick up address same as delivery address"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <in.prax.tamalproject.view.MyEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/register_background_edittext"
                android:hint="Diffrent address"
                android:padding="10dp" />

            <LinearLayout
                android:id="@+id/terms1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="I have read terms and conditions,including privacy policy" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pickup of tool and service confirmation" />

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector_white"
                    android:text="Order pickup"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/terms2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="I have read terms and conditions,including privacy policy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            android:text="@string/term2" />

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="'contract once signed' or company will bear all the related cost if the process is not completed in 3 working days." />
                    </LinearLayout>
                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:background="@drawable/button_selector_white"
                    android:text="Confirm and place yor request"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>