<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragment.ShippingFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/shipping1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <in.prax.tamalproject.view.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/register_background_edittext"
                            android:backgroundTint="@color/colorPrimary"
                            android:padding="5dp"
                            android:text=" Shipping details: "
                            android:textColor="@color/colorPrimary"
                            android:textColorHighlight="@color/colorPrimary"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <in.prax.tamalproject.view.MyEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/register_background_edittext"
                            android:hint="Shipping/Delivery Address"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <in.prax.tamalproject.view.MyEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/register_background_edittext"
                            android:hint="State"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <in.prax.tamalproject.view.MyEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/register_background_edittext"
                            android:hint="City"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <in.prax.tamalproject.view.MyEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/register_background_edittext"
                            android:hint="Postal code"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Receive invoice in SMS also"
                            android:textColor="@color/colorPrimary" />

                        <CheckBox
                            android:id="@+id/chkBillingAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Billing address same as shipping address"
                            android:textColor="@color/colorPrimary" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/billingaddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <in.prax.tamalproject.view.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/register_background_edittext"
                            android:backgroundTint="@color/colorPrimary"
                            android:padding="5dp"
                            android:text="Billing Address : "
                            android:textColor="@color/colorPrimary"
                            android:textColorHighlight="@color/colorPrimary"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <in.prax.tamalproject.view.MyEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_margin="10dp"
                            android:background="@drawable/register_background_edittext"
                            android:hint="Name"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <in.prax.tamalproject.view.MyEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_margin="10dp"
                            android:background="@drawable/register_background_edittext"
                            android:hint="Company name"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <in.prax.tamalproject.view.MyEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_margin="10dp"
                            android:background="@drawable/register_background_edittext"
                            android:hint="Phone number"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <in.prax.tamalproject.view.MyEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_margin="10dp"
                            android:background="@drawable/register_background_edittext"
                            android:hint="@string/Address"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <in.prax.tamalproject.view.MyEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_margin="10dp"
                            android:background="@drawable/register_background_edittext"
                            android:hint="@string/State"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <in.prax.tamalproject.view.MyEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_margin="10dp"
                            android:background="@drawable/register_background_edittext"
                            android:hint="@string/City"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <in.prax.tamalproject.view.MyEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_margin="5dp"
                            android:background="@drawable/register_background_edittext"
                            android:hint="Postal code"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/continuebilling"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_selector"
                        android:text="Continue"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shipping2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <in.prax.tamalproject.view.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Estimated Delivery Date : "
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <in.prax.tamalproject.view.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Estimated Delivery Time : "
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <in.prax.tamalproject.view.MyEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="@drawable/register_background_edittext"
                        android:hint="Payment Terms"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="Payment Reminder"
                        android:textColor="@color/colorPrimary" />


                    <in.prax.tamalproject.view.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/register_background_edittext"
                        android:backgroundTint="@color/colorPrimary"
                        android:padding="5dp"
                        android:text="Payment Method : "
                        android:textColor="@color/colorPrimary"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="RTGS/NEFT"
                        android:textColor="@color/colorPrimary" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Credit / Debit card"
                        android:textColor="@color/colorPrimary" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="COD"
                        android:textColor="@color/colorPrimary" />

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="I,hearby agree with terms and conditions and acknowledge all the payment terms stated"
                        android:textColor="@color/colorPrimary" />


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/placeyourorder"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/button_selector"
                        android:padding="10dp"
                        android:text="Place your order"
                        android:textColor="@color/white" />
                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>